RegExpParser.py
# Generated from RegExp.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class RegExpParser ( Parser ):

    grammarFileName = "RegExp.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'return'", "'('", "')'", "'Any'", 
                     "'ZeroOrMore'", "'OneOrMore'", "'Maybe'", "'Or'", "','", 
                     "'And'", "'Concat'", "'Contains'", "'Tam'", "'TamMin'", 
                     "'TamMax'", "'Prefix'", "'Sufix'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "INT", "VAR", 
                      "CHAIN", "NEWLINE", "WS" ]

    RULE_prog = 0
    RULE_stat = 1
    RULE_returnStat = 2
    RULE_exp = 3

    ruleNames =  [ "prog", "stat", "returnStat", "exp" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    INT=19
    VAR=20
    CHAIN=21
    NEWLINE=22
    WS=23

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def returnStat(self):
            return self.getTypedRuleContext(RegExpParser.ReturnStatContext,0)


        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RegExpParser.StatContext)
            else:
                return self.getTypedRuleContext(RegExpParser.StatContext,i)


        def getRuleIndex(self):
            return RegExpParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = RegExpParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 11
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==20:
                self.state = 8
                self.stat()
                self.state = 13
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 14
            self.returnStat()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(RegExpParser.VAR, 0)

        def exp(self):
            return self.getTypedRuleContext(RegExpParser.ExpContext,0)


        def NEWLINE(self):
            return self.getToken(RegExpParser.NEWLINE, 0)

        def getRuleIndex(self):
            return RegExpParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = RegExpParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self.match(RegExpParser.VAR)
            self.state = 17
            self.match(RegExpParser.T__0)
            self.state = 18
            self.exp()
            self.state = 19
            self.match(RegExpParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self):
            return self.getTypedRuleContext(RegExpParser.ExpContext,0)


        def NEWLINE(self):
            return self.getToken(RegExpParser.NEWLINE, 0)

        def getRuleIndex(self):
            return RegExpParser.RULE_returnStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStat" ):
                listener.enterReturnStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStat" ):
                listener.exitReturnStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStat" ):
                return visitor.visitReturnStat(self)
            else:
                return visitor.visitChildren(self)




    def returnStat(self):

        localctx = RegExpParser.ReturnStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_returnStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self.match(RegExpParser.T__1)
            self.state = 22
            self.exp()
            self.state = 23
            self.match(RegExpParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RegExpParser.RULE_exp

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class TamContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegExpParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(RegExpParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTam" ):
                listener.enterTam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTam" ):
                listener.exitTam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTam" ):
                return visitor.visitTam(self)
            else:
                return visitor.visitChildren(self)


    class ChainContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegExpParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CHAIN(self):
            return self.getToken(RegExpParser.CHAIN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChain" ):
                listener.enterChain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChain" ):
                listener.exitChain(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChain" ):
                return visitor.visitChain(self)
            else:
                return visitor.visitChildren(self)


    class OneOrMoreContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegExpParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exp(self):
            return self.getTypedRuleContext(RegExpParser.ExpContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOneOrMore" ):
                listener.enterOneOrMore(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOneOrMore" ):
                listener.exitOneOrMore(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOneOrMore" ):
                return visitor.visitOneOrMore(self)
            else:
                return visitor.visitChildren(self)


    class OrContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegExpParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RegExpParser.ExpContext)
            else:
                return self.getTypedRuleContext(RegExpParser.ExpContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOr" ):
                listener.enterOr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOr" ):
                listener.exitOr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOr" ):
                return visitor.visitOr(self)
            else:
                return visitor.visitChildren(self)


    class MaybeContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegExpParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exp(self):
            return self.getTypedRuleContext(RegExpParser.ExpContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMaybe" ):
                listener.enterMaybe(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMaybe" ):
                listener.exitMaybe(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMaybe" ):
                return visitor.visitMaybe(self)
            else:
                return visitor.visitChildren(self)


    class PrefixContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegExpParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exp(self):
            return self.getTypedRuleContext(RegExpParser.ExpContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrefix" ):
                listener.enterPrefix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrefix" ):
                listener.exitPrefix(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrefix" ):
                return visitor.visitPrefix(self)
            else:
                return visitor.visitChildren(self)


    class TamMinContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegExpParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(RegExpParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTamMin" ):
                listener.enterTamMin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTamMin" ):
                listener.exitTamMin(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTamMin" ):
                return visitor.visitTamMin(self)
            else:
                return visitor.visitChildren(self)


    class ConcatContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegExpParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RegExpParser.ExpContext)
            else:
                return self.getTypedRuleContext(RegExpParser.ExpContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConcat" ):
                listener.enterConcat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConcat" ):
                listener.exitConcat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConcat" ):
                return visitor.visitConcat(self)
            else:
                return visitor.visitChildren(self)


    class AnyContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegExpParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAny" ):
                listener.enterAny(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAny" ):
                listener.exitAny(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAny" ):
                return visitor.visitAny(self)
            else:
                return visitor.visitChildren(self)


    class VarExpContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegExpParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(RegExpParser.VAR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarExp" ):
                listener.enterVarExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarExp" ):
                listener.exitVarExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarExp" ):
                return visitor.visitVarExp(self)
            else:
                return visitor.visitChildren(self)


    class ContainsContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegExpParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exp(self):
            return self.getTypedRuleContext(RegExpParser.ExpContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContains" ):
                listener.enterContains(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContains" ):
                listener.exitContains(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContains" ):
                return visitor.visitContains(self)
            else:
                return visitor.visitChildren(self)


    class ZeroOrMoreContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegExpParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exp(self):
            return self.getTypedRuleContext(RegExpParser.ExpContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterZeroOrMore" ):
                listener.enterZeroOrMore(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitZeroOrMore" ):
                listener.exitZeroOrMore(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitZeroOrMore" ):
                return visitor.visitZeroOrMore(self)
            else:
                return visitor.visitChildren(self)


    class AndContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegExpParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RegExpParser.ExpContext)
            else:
                return self.getTypedRuleContext(RegExpParser.ExpContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnd" ):
                listener.enterAnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnd" ):
                listener.exitAnd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnd" ):
                return visitor.visitAnd(self)
            else:
                return visitor.visitChildren(self)


    class SufixContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegExpParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exp(self):
            return self.getTypedRuleContext(RegExpParser.ExpContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSufix" ):
                listener.enterSufix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSufix" ):
                listener.exitSufix(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSufix" ):
                return visitor.visitSufix(self)
            else:
                return visitor.visitChildren(self)


    class EmptyStringContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegExpParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmptyString" ):
                listener.enterEmptyString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmptyString" ):
                listener.exitEmptyString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmptyString" ):
                return visitor.visitEmptyString(self)
            else:
                return visitor.visitChildren(self)


    class NestedEXPContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegExpParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exp(self):
            return self.getTypedRuleContext(RegExpParser.ExpContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNestedEXP" ):
                listener.enterNestedEXP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNestedEXP" ):
                listener.exitNestedEXP(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNestedEXP" ):
                return visitor.visitNestedEXP(self)
            else:
                return visitor.visitChildren(self)


    class TamMaxContext(ExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RegExpParser.ExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(RegExpParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTamMax" ):
                listener.enterTamMax(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTamMax" ):
                listener.exitTamMax(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTamMax" ):
                return visitor.visitTamMax(self)
            else:
                return visitor.visitChildren(self)



    def exp(self):

        localctx = RegExpParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_exp)
        self._la = 0 # Token type
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = RegExpParser.EmptyStringContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 25
                self.match(RegExpParser.T__2)
                self.state = 26
                self.match(RegExpParser.T__3)
                pass

            elif la_ == 2:
                localctx = RegExpParser.NestedEXPContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 27
                self.match(RegExpParser.T__2)
                self.state = 28
                self.exp()
                self.state = 29
                self.match(RegExpParser.T__3)
                pass

            elif la_ == 3:
                localctx = RegExpParser.ChainContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 31
                self.match(RegExpParser.CHAIN)
                pass

            elif la_ == 4:
                localctx = RegExpParser.AnyContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 32
                self.match(RegExpParser.T__4)
                self.state = 33
                self.match(RegExpParser.T__2)
                self.state = 34
                self.match(RegExpParser.T__3)
                pass

            elif la_ == 5:
                localctx = RegExpParser.ZeroOrMoreContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 35
                self.match(RegExpParser.T__5)
                self.state = 36
                self.match(RegExpParser.T__2)
                self.state = 37
                self.exp()
                self.state = 38
                self.match(RegExpParser.T__3)
                pass

            elif la_ == 6:
                localctx = RegExpParser.OneOrMoreContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 40
                self.match(RegExpParser.T__6)
                self.state = 41
                self.match(RegExpParser.T__2)
                self.state = 42
                self.exp()
                self.state = 43
                self.match(RegExpParser.T__3)
                pass

            elif la_ == 7:
                localctx = RegExpParser.MaybeContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 45
                self.match(RegExpParser.T__7)
                self.state = 46
                self.match(RegExpParser.T__2)
                self.state = 47
                self.exp()
                self.state = 48
                self.match(RegExpParser.T__3)
                pass

            elif la_ == 8:
                localctx = RegExpParser.OrContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 50
                self.match(RegExpParser.T__8)
                self.state = 51
                self.match(RegExpParser.T__2)
                self.state = 52
                self.exp()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==10:
                    self.state = 53
                    self.match(RegExpParser.T__9)
                    self.state = 54
                    self.exp()
                    self.state = 59
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 60
                self.match(RegExpParser.T__3)
                pass

            elif la_ == 9:
                localctx = RegExpParser.AndContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 62
                self.match(RegExpParser.T__10)
                self.state = 63
                self.match(RegExpParser.T__2)
                self.state = 64
                self.exp()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==10:
                    self.state = 65
                    self.match(RegExpParser.T__9)
                    self.state = 66
                    self.exp()
                    self.state = 71
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 72
                self.match(RegExpParser.T__3)
                pass

            elif la_ == 10:
                localctx = RegExpParser.ConcatContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 74
                self.match(RegExpParser.T__11)
                self.state = 75
                self.match(RegExpParser.T__2)
                self.state = 76
                self.exp()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==10:
                    self.state = 77
                    self.match(RegExpParser.T__9)
                    self.state = 78
                    self.exp()
                    self.state = 83
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 84
                self.match(RegExpParser.T__3)
                pass

            elif la_ == 11:
                localctx = RegExpParser.ContainsContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 86
                self.match(RegExpParser.T__12)
                self.state = 87
                self.match(RegExpParser.T__2)
                self.state = 88
                self.exp()
                self.state = 89
                self.match(RegExpParser.T__3)
                pass

            elif la_ == 12:
                localctx = RegExpParser.TamContext(self, localctx)
                self.enterOuterAlt(localctx, 12)
                self.state = 91
                self.match(RegExpParser.T__13)
                self.state = 92
                self.match(RegExpParser.T__2)
                self.state = 93
                self.match(RegExpParser.INT)
                self.state = 94
                self.match(RegExpParser.T__3)
                pass

            elif la_ == 13:
                localctx = RegExpParser.TamMinContext(self, localctx)
                self.enterOuterAlt(localctx, 13)
                self.state = 95
                self.match(RegExpParser.T__14)
                self.state = 96
                self.match(RegExpParser.T__2)
                self.state = 97
                self.match(RegExpParser.INT)
                self.state = 98
                self.match(RegExpParser.T__3)
                pass

            elif la_ == 14:
                localctx = RegExpParser.TamMaxContext(self, localctx)
                self.enterOuterAlt(localctx, 14)
                self.state = 99
                self.match(RegExpParser.T__15)
                self.state = 100
                self.match(RegExpParser.T__2)
                self.state = 101
                self.match(RegExpParser.INT)
                self.state = 102
                self.match(RegExpParser.T__3)
                pass

            elif la_ == 15:
                localctx = RegExpParser.PrefixContext(self, localctx)
                self.enterOuterAlt(localctx, 15)
                self.state = 103
                self.match(RegExpParser.T__16)
                self.state = 104
                self.match(RegExpParser.T__2)
                self.state = 105
                self.exp()
                self.state = 106
                self.match(RegExpParser.T__3)
                pass

            elif la_ == 16:
                localctx = RegExpParser.SufixContext(self, localctx)
                self.enterOuterAlt(localctx, 16)
                self.state = 108
                self.match(RegExpParser.T__17)
                self.state = 109
                self.match(RegExpParser.T__2)
                self.state = 110
                self.exp()
                self.state = 111
                self.match(RegExpParser.T__3)
                pass

            elif la_ == 17:
                localctx = RegExpParser.VarExpContext(self, localctx)
                self.enterOuterAlt(localctx, 17)
                self.state = 113
                self.match(RegExpParser.VAR)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





